[gd_scene load_steps=29 format=3 uid="uid://dqhlmv6mga3ln"]

[ext_resource type="Script" uid="uid://e6rwi0hmxjmt" path="res://scripts/player/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://b1w1fm55k1ows" path="res://scripts/player/interaction_cast.gd" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://c3ts0ctil5x0o" path="res://audio/player/walking/grass/walking_grass1.mp3" id="7_a8ls1"]
[ext_resource type="Script" uid="uid://c6jkupiqfdi62" path="res://scripts/player/player_camera.gd" id="7_d2wvv"]
[ext_resource type="AudioStream" uid="uid://cheqymfi8vtl8" path="res://audio/player/walking/grass/walking_grass2.mp3" id="8_qfm1y"]
[ext_resource type="AudioStream" uid="uid://ds2ivsrp6eu18" path="res://audio/player/walking/grass/walking_grass3.mp3" id="9_fulsm"]
[ext_resource type="AudioStream" uid="uid://c2b4oh2d6ca6x" path="res://audio/player/walking/grass/walking_grass4.mp3" id="10_4r5pv"]
[ext_resource type="AudioStream" uid="uid://uwn8e8s5nxqp" path="res://audio/player/flashlight_click1.wav" id="10_d2wvv"]
[ext_resource type="Script" uid="uid://mpp1r0s6esp1" path="res://scripts/player/flashlight_cast.gd" id="10_y4r1p"]
[ext_resource type="AudioStream" uid="uid://cnqsf7c8vkcdg" path="res://audio/player/walking/grass/walking_grass5.mp3" id="11_60mlk"]
[ext_resource type="AudioStream" uid="uid://drv6nl8i7yqwv" path="res://audio/player/walking/path/walking_gravel1.wav" id="11_gkgcs"]
[ext_resource type="AudioStream" uid="uid://dpik2u7s2kc7f" path="res://audio/player/walking/path/walking_gravel2.wav" id="12_al2k6"]
[ext_resource type="AudioStream" uid="uid://bbatnag6os1dh" path="res://audio/player/walking/tile/walking_tile1.mp3" id="12_i4ail"]
[ext_resource type="AudioStream" uid="uid://c1dkotxxc07h6" path="res://audio/player/walking/tile/walking_tile2.mp3" id="13_a38lo"]
[ext_resource type="AudioStream" uid="uid://cejdlhxbn83ey" path="res://audio/player/walking/path/walking_gravel3.wav" id="13_kcfbe"]
[ext_resource type="AudioStream" uid="uid://c0107jqfbsdk8" path="res://audio/player/walking/tile/walking_tile3.mp3" id="14_4ni07"]
[ext_resource type="AudioStream" uid="uid://cbn5bcpofo1t7" path="res://audio/player/walking/path/walking_gravel4.wav" id="14_4pmpp"]
[ext_resource type="AudioStream" uid="uid://c0fwqi2qadp3e" path="res://audio/player/walking/tile/walking_tile4.mp3" id="15_l71n6"]
[ext_resource type="AudioStream" uid="uid://cjhuo4wswyhft" path="res://audio/player/walking/path/walking_gravel5.wav" id="15_tbe3u"]
[ext_resource type="AudioStream" uid="uid://dktt3xhu5sgs7" path="res://audio/player/walking/tile/walking_tile5.mp3" id="16_ke2ow"]
[ext_resource type="Script" uid="uid://veenudwxgh0m" path="res://scripts/player/components/player_restriction_component.gd" id="17_a38lo"]
[ext_resource type="Script" uid="uid://cwdxs3exqkduy" path="res://scripts/player/components/player_movement_component.gd" id="17_ke2ow"]
[ext_resource type="Script" uid="uid://bbeekljcyfied" path="res://scripts/player/components/player_camera_component.gd" id="18_ujl30"]
[ext_resource type="Script" uid="uid://c05dbsrlk1jcc" path="res://scripts/player/components/player_audio_component.gd" id="19_31cv2"]
[ext_resource type="Script" uid="uid://b6m4rxuada185" path="res://scripts/player/components/player_flashlight_component.gd" id="19_ke2ow"]
[ext_resource type="Script" uid="uid://c5ynl7lgv6ngm" path="res://scripts/ground_cast_component.gd" id="26_gkgcs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i3pqv"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 17
collision_mask = 5
script = ExtResource("1_4flbx")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("17_ke2ow")

[node name="CameraComponent" type="Node" parent="."]
script = ExtResource("18_ujl30")

[node name="FlashlightComponent" type="Node" parent="."]
script = ExtResource("19_ke2ow")

[node name="AudioComponent" type="Node" parent="."]
script = ExtResource("19_31cv2")
movement_grass = Array[AudioStream]([ExtResource("7_a8ls1"), ExtResource("8_qfm1y"), ExtResource("9_fulsm"), ExtResource("10_4r5pv"), ExtResource("11_60mlk")])
movement_path = Array[AudioStream]([ExtResource("11_gkgcs"), ExtResource("12_al2k6"), ExtResource("13_kcfbe"), ExtResource("14_4pmpp"), ExtResource("15_tbe3u")])
movement_tile = Array[AudioStream]([ExtResource("12_i4ail"), ExtResource("13_a38lo"), ExtResource("14_4ni07"), ExtResource("15_l71n6"), ExtResource("16_ke2ow")])

[node name="MovementAudio" type="AudioStreamPlayer" parent="AudioComponent"]

[node name="RestrictionComponent" type="Node" parent="."]
script = ExtResource("17_a38lo")

[node name="GroundCastComponent" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.2, 0)
collision_mask = 3
script = ExtResource("26_gkgcs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_i3pqv")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
current = true
fov = 150.0
script = ExtResource("7_d2wvv")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -1.5)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true
script = ExtResource("2_onrkg")

[node name="Flashlight" type="Node3D" parent="Head"]

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Flashlight"]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 0, 0, 0)
light_energy = 2.0
light_indirect_energy = 0.0
light_specular = 0.0
light_cull_mask = 4294967293
spot_range = 40.0
spot_attenuation = 0.75
spot_angle = 35.0
spot_angle_attenuation = 0.5

[node name="FlashlightAudio" type="AudioStreamPlayer" parent="Head/Flashlight"]
stream = ExtResource("10_d2wvv")

[node name="OmniLight3D" type="OmniLight3D" parent="Head/Flashlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
light_energy = 0.5
light_indirect_energy = 0.0
light_specular = 0.0
omni_range = 4.0
omni_attenuation = 0.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Flashlight"]
target_position = Vector3(0, 0, -10)
collision_mask = 3
script = ExtResource("10_y4r1p")

[connection signal="object_collected" from="Head/Camera3D/RayCast3D" to="Head/Flashlight" method="_on_ray_cast_3d_object_collected"]
